Fix card shadow overflow on light theme for chat

--- a/src/app/referrals-beta/referrals-beta.component.scss
+++ b/src/app/referrals-beta/referrals-beta.component.scss
@@ -16,6 +16,7 @@
   .c-chat {
     width: 350px;
     overflow-x: hidden;
+    padding: 0 4px;
   }
 
   .vert {
